Do not disable the menus but add reset/skip/back to menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,21 @@
 {
   "Lua.diagnostics.globals": [
+		"_draw",
+		"_init",
+		"_update",
+		"add",
+		"all",
+		"btnp",
+		"circfill",
+		"del",
+		"flr",
+		"menuitem",
+		"pal",
+		"pset",
+		"rect",
+		"rectfill",
+		"rnd",
+		"sub",
     "_draw",
     "_init",
     "_update",
