Ensure that redirections are preferred over continuing in the same direction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,100 @@
 {
   "Lua.diagnostics.globals": [
-		"_draw",
-		"_init",
-		"_update",
-		"add",
-		"all",
-		"btnp",
-		"circfill",
-		"del",
-		"flr",
-		"pal",
-		"pset",
-		"rect",
-		"rectfill",
-		"rnd",
-		"sub",
+    "_draw",
+    "_init",
+    "_update",
+    "add",
+    "all",
+    "all_worlds_completed",
+    "blink_timer",
+    "blinking_pokes",
+    "blinking_step",
+    "blinking_steps",
+    "burst_active",
+    "burst_radius",
+    "burst_speed",
     "btn",
+    "btnp",
     "cartdata",
+    "circfill",
     "cls",
+    "coordinates_enabled",
+    "cursor_colors",
+    "cursor_step",
+    "cursor_steps_per_frame",
+    "cursor_x",
+    "cursor_y",
+    "current_text",
+    "del",
+    "delete_save_data_button_label",
     "dget",
     "dset",
+    "failure_sfx",
+    "failure_sound_played",
+    "fire",
+    "fire_animation_sprites",
+    "fire_animation_timer",
+    "fire_dir",
+    "fire_fail_animation_frame",
+    "fire_fail_animation_sprites",
+    "fire_visible",
+    "flash",
+    "flash_frames",
+    "flr",
+    "frames_in_step",
+    "game_state",
+    "goal_lit",
+    "grid_start_x",
+    "grid_start_y",
+    "grid_x",
+    "grid_y",
+    "grid_size",
+    "help_text_color_step",
+    "help_text_colors",
+    "help_text_color_steps",
+    "large_alphabet",
+    "lvl",
+    "lvl_index",
+    "lvl_timer",
+    "lvls",
+    "max_steps",
+    "menu_action_sfx",
     "music",
+    "music_enabled",
+    "nav_sfx",
+    "nudges",
+    "pal",
+    "particles_enabled",
+    "PICO8_HEIGHT",
+    "PICO8_WIDTH",
     "poke",
+    "pokes",
+    "pre_turn_pokes",
+    "pset",
+    "rain_frame_counter",
+    "rain_move_interval",
+    "raindrops",
+    "rain_speed",
+    "rect",
+    "rectfill",
+    "remaining_pokes",
+    "rnd",
+    "settings_sel",
     "sfx",
+    "spr",
     "stat",
-    "spr"
+    "step_counter",
+    "step_sfx",
+    "success_sfx",
+    "success_sound_played",
+    "sub",
+    "toggle_music_button_label",
+    "turn_time",
+    "turn_timer",
+    "world_index",
+    "world_picker_sel",
+    "z_press_count",
+    "z_press_timer"
   ],
   "cSpell.customDictionaries": {
     "custom-dictionary-workspace": {
