Fix mechanics to be consistent + fix 3-6 (id 54)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,7 @@
     "dget",
     "dset",
     "failure_sfx",
-    "failure_sound_played",
+    "fail_sound_played",
     "fire",
     "fire_animation_sprites",
     "fire_animation_timer",
@@ -94,7 +94,47 @@
     "world_index",
     "world_picker_sel",
     "z_press_count",
-    "z_press_timer"
+    "z_press_timer",
+    "parse_lvls",
+    "is_world_completed",
+    "set_completed_from_lvl_data",
+    "contains",
+    "draw_big",
+    "print_big",
+    "is_valid_move",
+    "next_position",
+    "poke_redirects",
+    "calc_poke_intents",
+    "calc_fire_intents",
+    "calc_valid_intents",
+    "towards_flame",
+    "should_move",
+    "animate_entity",
+    "exec_move",
+    "set_flash",
+    "detect_nudges",
+    "blink",
+    "turn",
+    "make_poke",
+    "reset_lvl",
+    "check_cheat_codes",
+    "handle_inputs",
+    "draw_obs",
+    "draw_fire",
+    "draw_pokes",
+    "word_width",
+    "draw_word",
+    "draw_text",
+    "draw_help_text",
+    "draw_dithering_night",
+    "draw_title_screen",
+    "draw_button",
+    "draw_world_picker",
+    "draw_settings_screen",
+    "draw_controls_screen",
+    "spawn_raindrops",
+    "draw_rain",
+    "play_music"
   ],
   "cSpell.customDictionaries": {
     "custom-dictionary-workspace": {
