Shorten variable names

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,7 @@
     "help_text_color_steps",
     "large_alphabet",
     "lvl",
-    "lvl_index",
+    "lvl_idx",
     "lvl_timer",
     "lvls",
     "max_steps",
@@ -91,7 +91,7 @@
     "toggle_music_button_label",
     "turn_time",
     "turn_timer",
-    "world_index",
+    "world_idx",
     "world_picker_sel",
     "z_press_count",
     "z_press_timer",
